--- a/lib/mapdog_web/templates/page/index.html.eex
+++ b/lib/mapdog_web/templates/page/index.html.eex
@@ -1,2 +1,2 @@
 <div id="app"></div>
-<script src="<%= static_path(@conn, "/js/home.js") %>"></script>
+<script src="<%= static_path(@conn, "/home.js") %>"></script>
