--- a/lib/mapdog_web/templates/page/index.html.eex
+++ b/lib/mapdog_web/templates/page/index.html.eex
@@ -1,2 +1,3 @@
 <div id="app"></div>
-<script src="<%= static_path(@conn, "/home.js") %>"></script>
+<%# 这里必须使用js文件夹 因为默认ednponts.ex设置了only属性 %>
+<script src="<%= static_url(@conn, "/js/home.js") %>"></script>
